--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,8 +47,8 @@
                 </a>
 
                 <div class="navbar-item has-text-white">
-                    <label for="languageDropdown">🌐</label>
-                    <select id="languageDropdown" name="languageDropdown"
+                    <span>🌐</span>
+                    <select id="languageDropdown" name="languageDropdown" aria-label="Select language"
                         onchange="localStorage.setItem('languageDropdownValue', this.value); location.reload();">
                         <option value="de">Deutsch (de)</option>
                         <option value="en">English (en)</option>
@@ -56,7 +56,8 @@
                 </div>
 
                 {% if site.gh_sponsor %}
-                <a class="navbar-item has-text-white" href="https://github.com/sponsors/{{ site.gh_sponsor }}" aria-label="Sponsor">
+                <a class="navbar-item has-text-white" href="https://github.com/sponsors/{{ site.gh_sponsor }}"
+                    aria-label="Sponsor">
                     <span>♡︎ Sponsor</span>
                 </a>
                 {% endif %}
