--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,7 +47,7 @@
                 </a>
 
                 <div class="navbar-item has-text-white">
-                    <span>🌐</span>
+                    <span class="mr-1">🌐</span>
                     <select id="languageDropdown" name="languageDropdown" aria-label="Select language"
                         onchange="localStorage.setItem('languageDropdownValue', this.value); location.reload();">
                         <option value="de">Deutsch (de)</option>
