refactor:  language selector icon and redirection code

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,7 +48,7 @@
 
                 <div class="navbar-item has-text-white">
                     <span class="mr-0">🌐</span>
-                    <select class="mr-0" id="languageDropdown" name="languageDropdown" aria-label="Select language"
+                    <select class="ml-0" id="languageDropdown" name="languageDropdown" aria-label="Select language"
                         onchange="localStorage.setItem('languageDropdownValue', this.value); location.reload();">
                         <option value="de">Deutsch (de)</option>
                         <option value="en">English (en)</option>
