--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,11 +47,10 @@
                 </a>
 
                 <div class="navbar-item has-text-white">
-                    <span class="mr-0">🌐</span>
-                    <select class="ml-0" id="languageDropdown" name="languageDropdown" aria-label="Select language"
+                    <select id="languageDropdown" name="languageDropdown" aria-label="Select language"
                         onchange="localStorage.setItem('languageDropdownValue', this.value); location.reload();">
-                        <option value="de">Deutsch (de)</option>
-                        <option value="en">English (en)</option>
+                        <option value="de">🌐 Deutsch (de)</option>
+                        <option value="en">🌐 English (en)</option>
                     </select>
                 </div>
 
